@@ -47,7 +47,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.Collections.unmodifiableList;
@@ -128,10 +127,10 @@ public class TransportIndicesAliasesAction extends AcknowledgedTransportMasterNo
                 List<Index> nonBackingIndices = Arrays.stream(unprocessedConcreteIndices).filter(index -> {
                     var ia = state.metadata().getIndicesLookup().get(index.getName());
                     return ia.getParentDataStream() == null;
-                }).collect(Collectors.toList());
+                }).toList();
                 concreteIndices = nonBackingIndices.toArray(Index[]::new);
                 switch (action.actionType()) {
-                    case ADD:
+                    case ADD -> {
                         // Fail if parameters are used that data stream aliases don't support:
                         if (action.routing() != null) {
                             throw new IllegalArgumentException("aliases that point to data streams don't support routing");
@@ -159,7 +158,8 @@ public class TransportIndicesAliasesAction extends AcknowledgedTransportMasterNo
                             }
                         }
                         continue;
-                    case REMOVE:
+                    }
+                    case REMOVE -> {
                         for (String dataStreamName : concreteDataStreams) {
                             for (String alias : concreteDataStreamAliases(action, state.metadata(), dataStreamName)) {
                                 finalActions.add(new AliasAction.RemoveDataStreamAlias(alias, dataStreamName, action.mustExist()));
@@ -168,12 +168,11 @@ public class TransportIndicesAliasesAction extends AcknowledgedTransportMasterNo
                         if (nonBackingIndices.isEmpty() == false) {
                             // Regular aliases/indices match as well with the provided expression.
                             // (Only when adding new aliases, matching both data streams and indices is disallowed)
-                            break;
                         } else {
                             continue;
                         }
-                    default:
-                        throw new IllegalArgumentException("Unsupported action [" + action.actionType() + "]");
+                    }
+                    default -> throw new IllegalArgumentException("Unsupported action [" + action.actionType() + "]");
                 }
             } else {
                 concreteIndices = indexNameExpressionResolver.concreteIndices(state, request.indicesOptions(), false, action.indices());
@@ -204,7 +203,7 @@ public class TransportIndicesAliasesAction extends AcknowledgedTransportMasterNo
                 switch (action.actionType()) {
                     case ADD:
                         for (String alias : concreteAliases(action, state.metadata(), index.getName())) {
-                            String resolvedName = this.indexNameExpressionResolver.resolveDateMathExpression(alias, now);
+                            String resolvedName = IndexNameExpressionResolver.resolveDateMathExpression(alias, now);
                             finalActions.add(
                                 new AliasAction.Add(
                                     index.getName(),
