@@ -22,7 +22,6 @@ import org.elasticsearch.indices.EmptySystemIndices;
 import java.io.IOException;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.cluster.metadata.DataStreamTestHelper.generateMapping;
 import static org.hamcrest.Matchers.containsInAnyOrder;
@@ -53,7 +52,9 @@ public class MetadataMigrateToDataStreamServiceTests extends MapperServiceTestCa
 
     public void testValidateRequestWithFilteredAlias() {
         String filteredAliasName = "filtered_alias";
-        AliasMetadata filteredAlias = AliasMetadata.builder(filteredAliasName).filter("{\"term\":{\"user.id\":\"kimchy\"}}").build();
+        AliasMetadata filteredAlias = AliasMetadata.builder(filteredAliasName).filter("""
+            {"term":{"user.id":"kimchy"}}
+            """).build();
         ClusterState cs = ClusterState.builder(new ClusterName("dummy"))
             .metadata(
                 Metadata.builder()
@@ -304,7 +305,7 @@ public class MetadataMigrateToDataStreamServiceTests extends MapperServiceTestCa
         assertThat(ds, notNullValue());
         assertThat(ds.getType(), equalTo(IndexAbstraction.Type.DATA_STREAM));
         assertThat(ds.getIndices().size(), equalTo(2));
-        List<String> backingIndexNames = ds.getIndices().stream().map(Index::getName).collect(Collectors.toList());
+        List<String> backingIndexNames = ds.getIndices().stream().map(Index::getName).toList();
         assertThat(backingIndexNames, containsInAnyOrder("foo1", "foo2"));
         assertThat(ds.getWriteIndex().getName(), equalTo("foo1"));
         for (Index index : ds.getIndices()) {
@@ -365,7 +366,7 @@ public class MetadataMigrateToDataStreamServiceTests extends MapperServiceTestCa
         assertThat(ds, notNullValue());
         assertThat(ds.getType(), equalTo(IndexAbstraction.Type.DATA_STREAM));
         assertThat(ds.getIndices().size(), equalTo(2));
-        List<String> backingIndexNames = ds.getIndices().stream().map(Index::getName).collect(Collectors.toList());
+        List<String> backingIndexNames = ds.getIndices().stream().map(Index::getName).toList();
         assertThat(backingIndexNames, containsInAnyOrder("foo1", "foo2"));
         assertThat(ds.getWriteIndex().getName(), equalTo("foo1"));
         for (Index index : ds.getIndices()) {
