@@ -22,7 +22,6 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.Matchers.containsString;
 
@@ -108,7 +107,7 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
 
         RuntimeField rf = mapperService.mappingLookup().getMapping().getRoot().getRuntimeField("obj");
         assertEquals("obj", rf.name());
-        Collection<MappedFieldType> mappedFieldTypes = rf.asMappedFieldTypes().collect(Collectors.toList());
+        Collection<MappedFieldType> mappedFieldTypes = rf.asMappedFieldTypes().toList();
         for (MappedFieldType mappedFieldType : mappedFieldTypes) {
             if (mappedFieldType.name().equals("obj.long-subfield")) {
                 assertSame(longSubfield, mappedFieldType);
@@ -155,11 +154,9 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
             b.endObject();
         }));
         assertEquals(
-            "{\"_doc\":{\"runtime\":{"
-                + "\"message\":{\"type\":\"composite\","
-                + "\"meta\":{\"test-meta\":\"value\"},"
-                + "\"script\":{\"source\":\"dummy\",\"lang\":\"painless\"},"
-                + "\"fields\":{\"response\":{\"type\":\"long\"}}}}}}",
+            """
+                {"_doc":{"runtime":{"message":{"type":"composite","meta":{"test-meta":"value"},\
+                "script":{"source":"dummy","lang":"painless"},"fields":{"response":{"type":"long"}}}}}}""",
             Strings.toString(mapperService.mappingLookup().getMapping())
         );
     }
@@ -266,16 +263,13 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
         RuntimeField rf = mapperService.mappingLookup().getMapping().getRoot().getRuntimeField("obj");
         assertEquals("obj", rf.name());
 
-        Collection<MappedFieldType> mappedFieldTypes = rf.asMappedFieldTypes().collect(Collectors.toList());
+        Collection<MappedFieldType> mappedFieldTypes = rf.asMappedFieldTypes().toList();
         assertEquals(1, mappedFieldTypes.size());
         assertSame(doubleSubField, mappedFieldTypes.iterator().next());
 
-        assertEquals(
-            "{\"obj\":{\"type\":\"composite\","
-                + "\"script\":{\"source\":\"dummy2\",\"lang\":\"painless\"},"
-                + "\"fields\":{\"double-subfield\":{\"type\":\"double\"}}}}",
-            Strings.toString(rf)
-        );
+        assertEquals("""
+            {"obj":{"type":"composite","script":{"source":"dummy2","lang":"painless"},\
+            "fields":{"double-subfield":{"type":"double"}}}}""", Strings.toString(rf));
     }
 
     public void testFieldDefinedTwiceWithSameName() throws IOException {
@@ -418,10 +412,8 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
         assertNull(doc1.rootDoc().get("obj.long"));
         assertNotNull(doc1.rootDoc().get("obj.bool"));
 
-        assertEquals(
-            "{\"_doc\":{\"properties\":{\"obj\":{\"properties\":{\"bool\":{\"type\":\"boolean\"}}}}}}",
-            Strings.toString(doc1.dynamicMappingsUpdate())
-        );
+        assertEquals("""
+            {"_doc":{"properties":{"obj":{"properties":{"bool":{"type":"boolean"}}}}}}""", Strings.toString(doc1.dynamicMappingsUpdate()));
 
         MapperService mapperService2 = createMapperService(topMapping(b -> {
             b.field("dynamic", "runtime");
@@ -439,9 +431,7 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
         ParsedDocument doc2 = mapperService2.documentMapper().parse(source(b -> b.field("obj.long", 1L).field("obj.bool", true)));
         assertNull(doc2.rootDoc().get("obj.long"));
         assertNull(doc2.rootDoc().get("obj.bool"));
-        assertEquals(
-            "{\"_doc\":{\"dynamic\":\"runtime\",\"runtime\":{\"obj.bool\":{\"type\":\"boolean\"}}}}",
-            Strings.toString(doc2.dynamicMappingsUpdate())
-        );
+        assertEquals("""
+            {"_doc":{"dynamic":"runtime","runtime":{"obj.bool":{"type":"boolean"}}}}""", Strings.toString(doc2.dynamicMappingsUpdate()));
     }
 }
