@@ -22,7 +22,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.Matchers.equalTo;
 
@@ -89,7 +88,8 @@ public class DynamicTemplateTests extends ESTestCase {
         DynamicTemplate template = DynamicTemplate.parse("my_template", templateDef);
         Map<String, Object> stringObjectMap = template.mappingForName("my_name", "my_type");
         assertEquals(
-            "{\"field1_my_name\":\"my_type\",\"test\":[\"field2_my_name_my_type\"]}",
+            """
+                {"field1_my_name":"my_type","test":["field2_my_name_my_type"]}""",
             Strings.toString(JsonXContent.contentBuilder().map(stringObjectMap))
         );
     }
@@ -101,7 +101,8 @@ public class DynamicTemplateTests extends ESTestCase {
         DynamicTemplate template = DynamicTemplate.parse("my_template", templateDef);
         Map<String, Object> stringObjectMap = template.mappingForName("my_name", "my_type");
         assertEquals(
-            "{\"field1_my_name\":\"my_type\",\"test\":[\"field2_my_name_my_type\"]}",
+            """
+                {"field1_my_name":"my_type","test":["field2_my_name_my_type"]}""",
             Strings.toString(JsonXContent.contentBuilder().map(stringObjectMap))
         );
     }
@@ -219,7 +220,7 @@ public class DynamicTemplateTests extends ESTestCase {
     public void testMatchTypeTemplateRuntime() {
         List<XContentFieldType> runtimeFieldTypes = Arrays.stream(XContentFieldType.values())
             .filter(XContentFieldType::supportsRuntimeField)
-            .collect(Collectors.toList());
+            .toList();
         for (XContentFieldType runtimeFieldType : runtimeFieldTypes) {
             Map<String, Object> templateDef = new HashMap<>();
             templateDef.put("match_mapping_type", runtimeFieldType.name().toLowerCase(Locale.ROOT));
@@ -239,7 +240,7 @@ public class DynamicTemplateTests extends ESTestCase {
     public void testMatchTypeTemplateRuntimeUnsupported() {
         List<XContentFieldType> xContentFieldTypes = Arrays.stream(XContentFieldType.values())
             .filter(xContentFieldType -> xContentFieldType.supportsRuntimeField() == false)
-            .collect(Collectors.toList());
+            .toList();
         for (XContentFieldType xContentFieldType : xContentFieldTypes) {
             String fieldType = xContentFieldType.name().toLowerCase(Locale.ROOT);
             Map<String, Object> templateDef = new HashMap<>();
@@ -285,7 +286,8 @@ public class DynamicTemplateTests extends ESTestCase {
         DynamicTemplate template = DynamicTemplate.parse("my_template", templateDef);
         XContentBuilder builder = JsonXContent.contentBuilder();
         template.toXContent(builder, ToXContent.EMPTY_PARAMS);
-        assertEquals("{\"match_mapping_type\":\"string\",\"mapping\":{\"store\":true}}", Strings.toString(builder));
+        assertEquals("""
+            {"match_mapping_type":"string","mapping":{"store":true}}""", Strings.toString(builder));
 
         // name-based template
         templateDef = new HashMap<>();
@@ -298,7 +300,8 @@ public class DynamicTemplateTests extends ESTestCase {
         template = DynamicTemplate.parse("my_template", templateDef);
         builder = JsonXContent.contentBuilder();
         template.toXContent(builder, ToXContent.EMPTY_PARAMS);
-        assertEquals("{\"match\":\"*name\",\"unmatch\":\"first_name\",\"mapping\":{\"store\":true}}", Strings.toString(builder));
+        assertEquals("""
+            {"match":"*name","unmatch":"first_name","mapping":{"store":true}}""", Strings.toString(builder));
 
         // path-based template
         templateDef = new HashMap<>();
@@ -311,7 +314,8 @@ public class DynamicTemplateTests extends ESTestCase {
         template = DynamicTemplate.parse("my_template", templateDef);
         builder = JsonXContent.contentBuilder();
         template.toXContent(builder, ToXContent.EMPTY_PARAMS);
-        assertEquals("{\"path_match\":\"*name\",\"path_unmatch\":\"first_name\",\"mapping\":{\"store\":true}}", Strings.toString(builder));
+        assertEquals("""
+            {"path_match":"*name","path_unmatch":"first_name","mapping":{"store":true}}""", Strings.toString(builder));
 
         // regex matching
         templateDef = new HashMap<>();
@@ -324,7 +328,8 @@ public class DynamicTemplateTests extends ESTestCase {
         template = DynamicTemplate.parse("my_template", templateDef);
         builder = JsonXContent.contentBuilder();
         template.toXContent(builder, ToXContent.EMPTY_PARAMS);
-        assertEquals("{\"match\":\"^a$\",\"match_pattern\":\"regex\",\"mapping\":{\"store\":true}}", Strings.toString(builder));
+        assertEquals("""
+            {"match":"^a$","match_pattern":"regex","mapping":{"store":true}}""", Strings.toString(builder));
 
         // empty condition
         templateDef = new HashMap<>();
@@ -332,7 +337,8 @@ public class DynamicTemplateTests extends ESTestCase {
         template = DynamicTemplate.parse("my_template", templateDef);
         builder = JsonXContent.contentBuilder();
         template.toXContent(builder, ToXContent.EMPTY_PARAMS);
-        assertThat(Strings.toString(builder), equalTo("{\"mapping\":{\"store\":true}}"));
+        assertThat(Strings.toString(builder), equalTo("""
+            {"mapping":{"store":true}}"""));
     }
 
     public void testSerializationRuntimeMappings() throws Exception {
@@ -343,7 +349,8 @@ public class DynamicTemplateTests extends ESTestCase {
         DynamicTemplate template = DynamicTemplate.parse("my_template", templateDef);
         XContentBuilder builder = JsonXContent.contentBuilder();
         template.toXContent(builder, ToXContent.EMPTY_PARAMS);
-        assertEquals("{\"match_mapping_type\":\"string\",\"runtime\":{}}", Strings.toString(builder));
+        assertEquals("""
+            {"match_mapping_type":"string","runtime":{}}""", Strings.toString(builder));
 
         // name-based template
         templateDef = new HashMap<>();
@@ -356,7 +363,8 @@ public class DynamicTemplateTests extends ESTestCase {
         template = DynamicTemplate.parse("my_template", templateDef);
         builder = JsonXContent.contentBuilder();
         template.toXContent(builder, ToXContent.EMPTY_PARAMS);
-        assertEquals("{\"match\":\"*name\",\"unmatch\":\"first_name\",\"runtime\":{\"type\":\"new_type\"}}", Strings.toString(builder));
+        assertEquals("""
+            {"match":"*name","unmatch":"first_name","runtime":{"type":"new_type"}}""", Strings.toString(builder));
 
         // path-based template
         templateDef = new HashMap<>();
@@ -369,7 +377,8 @@ public class DynamicTemplateTests extends ESTestCase {
         template = DynamicTemplate.parse("my_template", templateDef);
         builder = JsonXContent.contentBuilder();
         template.toXContent(builder, ToXContent.EMPTY_PARAMS);
-        assertEquals("{\"path_match\":\"*name\",\"path_unmatch\":\"first_name\",\"runtime\":{}}", Strings.toString(builder));
+        assertEquals("""
+            {"path_match":"*name","path_unmatch":"first_name","runtime":{}}""", Strings.toString(builder));
 
         // regex matching
         templateDef = new HashMap<>();
@@ -382,7 +391,8 @@ public class DynamicTemplateTests extends ESTestCase {
         template = DynamicTemplate.parse("my_template", templateDef);
         builder = JsonXContent.contentBuilder();
         template.toXContent(builder, ToXContent.EMPTY_PARAMS);
-        assertEquals("{\"match\":\"^a$\",\"match_pattern\":\"regex\",\"runtime\":{}}", Strings.toString(builder));
+        assertEquals("""
+            {"match":"^a$","match_pattern":"regex","runtime":{}}""", Strings.toString(builder));
     }
 
     public void testMatchTemplateName() throws Exception {
