@@ -14,9 +14,11 @@ import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.support.ActionFilters;
 import org.elasticsearch.action.support.master.AcknowledgedResponse;
 import org.elasticsearch.action.support.master.TransportMasterNodeAction;
-import org.elasticsearch.client.Client;
+import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.AckedClusterStateUpdateTask;
 import org.elasticsearch.cluster.ClusterState;
+import org.elasticsearch.cluster.ClusterStateTaskExecutor;
+import org.elasticsearch.cluster.ClusterStateUpdateTask;
 import org.elasticsearch.cluster.block.ClusterBlockException;
 import org.elasticsearch.cluster.block.ClusterBlockLevel;
 import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
@@ -24,6 +26,8 @@ import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.metadata.RepositoriesMetadata;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.inject.Inject;
+import org.elasticsearch.core.Nullable;
+import org.elasticsearch.core.SuppressForbidden;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.threadpool.ThreadPool;
@@ -45,7 +49,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.SortedMap;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.xpack.core.ilm.PhaseCacheManagement.updateIndicesForPolicy;
 import static org.elasticsearch.xpack.core.searchablesnapshots.SearchableSnapshotsConstants.SEARCHABLE_SNAPSHOT_FEATURE;
@@ -94,24 +97,38 @@ public class TransportPutLifecycleAction extends TransportMasterNodeAction<Reque
         // REST layer and the Transport layer here must be accessed within this thread and not in the
         // cluster state thread in the ClusterStateUpdateTask below since that thread does not share the
         // same context, and therefore does not have access to the appropriate security headers.
-        Map<String, String> filteredHeaders = ClientHelper.filterSecurityHeaders(threadPool.getThreadContext().getHeaders());
+        Map<String, String> filteredHeaders = ClientHelper.getPersistableSafeSecurityHeaders(threadPool.getThreadContext(), state);
 
         LifecyclePolicy.validatePolicyName(request.getPolicy().getName());
+
+        {
+            IndexLifecycleMetadata lifecycleMetadata = state.metadata().custom(IndexLifecycleMetadata.TYPE, IndexLifecycleMetadata.EMPTY);
+            LifecyclePolicyMetadata existingPolicy = lifecycleMetadata.getPolicyMetadatas().get(request.getPolicy().getName());
+            // Make the request a no-op if the policy and filtered headers match exactly
+            if (isNoopUpdate(existingPolicy, request.getPolicy(), filteredHeaders)) {
+                listener.onResponse(AcknowledgedResponse.TRUE);
+                return;
+            }
+        }
 
         clusterService.submitStateUpdateTask(
             "put-lifecycle-" + request.getPolicy().getName(),
             new AckedClusterStateUpdateTask(request, listener) {
                 @Override
                 public ClusterState execute(ClusterState currentState) throws Exception {
+                    final IndexLifecycleMetadata currentMetadata = currentState.metadata()
+                        .custom(IndexLifecycleMetadata.TYPE, IndexLifecycleMetadata.EMPTY);
+                    final LifecyclePolicyMetadata existingPolicyMetadata = currentMetadata.getPolicyMetadatas()
+                        .get(request.getPolicy().getName());
+
+                    // Double-check for no-op in the state update task, in case it was changed/reset in the meantime
+                    if (isNoopUpdate(existingPolicyMetadata, request.getPolicy(), filteredHeaders)) {
+                        return currentState;
+                    }
+
                     validatePrerequisites(request.getPolicy(), currentState);
 
                     ClusterState.Builder stateBuilder = ClusterState.builder(currentState);
-                    IndexLifecycleMetadata currentMetadata = currentState.metadata().custom(IndexLifecycleMetadata.TYPE);
-                    if (currentMetadata == null) { // first time using index-lifecycle feature, bootstrap metadata
-                        currentMetadata = IndexLifecycleMetadata.EMPTY;
-                    }
-                    LifecyclePolicyMetadata existingPolicyMetadata = currentMetadata.getPolicyMetadatas()
-                        .get(request.getPolicy().getName());
                     long nextVersion = (existingPolicyMetadata == null) ? 1L : existingPolicyMetadata.getVersion() + 1L;
                     SortedMap<String, LifecyclePolicyMetadata> newPolicies = new TreeMap<>(currentMetadata.getPolicyMetadatas());
                     LifecyclePolicyMetadata lifecyclePolicyMetadata = new LifecyclePolicyMetadata(
@@ -156,8 +173,29 @@ public class TransportPutLifecycleAction extends TransportMasterNodeAction<Reque
                         }
                     }
                 }
-            }
+            },
+            newExecutor()
         );
+    }
+
+    @SuppressForbidden(reason = "legacy usage of unbatched task") // TODO add support for batching here
+    private static <T extends ClusterStateUpdateTask> ClusterStateTaskExecutor<T> newExecutor() {
+        return ClusterStateTaskExecutor.unbatched();
+    }
+
+    /**
+     * Returns 'true' if the ILM policy is effectually the same (same policy and headers), and thus can be a no-op update.
+     */
+    static boolean isNoopUpdate(
+        @Nullable LifecyclePolicyMetadata existingPolicy,
+        LifecyclePolicy newPolicy,
+        Map<String, String> filteredHeaders
+    ) {
+        if (existingPolicy == null) {
+            return false;
+        } else {
+            return newPolicy.equals(existingPolicy.getPolicy()) && filteredHeaders.equals(existingPolicy.getHeaders());
+        }
     }
 
     /**
@@ -172,7 +210,7 @@ public class TransportPutLifecycleAction extends TransportMasterNodeAction<Reque
             .values()
             .stream()
             .filter(phase -> phase.getActions().containsKey(SearchableSnapshotAction.NAME))
-            .collect(Collectors.toList());
+            .toList();
         // check license level for searchable snapshots
         if (phasesWithSearchableSnapshotActions.isEmpty() == false
             && SEARCHABLE_SNAPSHOT_FEATURE.checkWithoutTracking(licenseState) == false) {
@@ -207,7 +245,7 @@ public class TransportPutLifecycleAction extends TransportMasterNodeAction<Reque
             .values()
             .stream()
             .filter(phase -> phase.getActions().containsKey(WaitForSnapshotAction.NAME))
-            .collect(Collectors.toList());
+            .toList();
         // make sure any referenced snapshot lifecycle policies exist
         for (Phase phase : phasesWithWaitForSnapshotActions) {
             WaitForSnapshotAction action = (WaitForSnapshotAction) phase.getActions().get(WaitForSnapshotAction.NAME);
